force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application__c/agf__ADM_Application__c.object-meta.xml
<CustomObject>
    <description>Application lists resources associated with the release and management of any system that is released (has Releases).</description>
    <label>Application</label>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>