force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application__c/fields/agf__Applicable_Moratoriums__c.field-meta.xml
<CustomField>
    <fullName>agf__Applicable_Moratoriums__c</fullName>
    <description>Moratoriums that impact the application&apos;s release.</description>
    <inlineHelpText>Moratoriums that impact the application&apos;s release.</inlineHelpText>
    <label>Applicable Moratoriums</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Dreamforce</fullName>
            </value>
            <value>
                <fullName>EOM</fullName>
            </value>
            <value>
                <fullName>EOY / Holidays</fullName>
            </value>
            <value>
                <fullName>Major Release</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>