force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application__c/fields/agf__Application_Planned_Duration__c.field-meta.xml
<CustomField>
    <fullName>agf__Application_Planned_Duration__c</fullName>
    <label>Default Planned Duration</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>