force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application__c/fields/agf__Application_Type__c.field-meta.xml
<CustomField>
    <fullName>agf__Application_Type__c</fullName>
    <label>Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Core Salesforce Application</fullName>
            </value>
            <value>
                <fullName>Distributed Customer Facing Application</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Independent R&amp;D</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Internal Monitoring &amp; Management</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Moratorium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>