force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application__c/fields/agf__Case_Description_Footer__c.field-meta.xml
<CustomField>
    <fullName>agf__Case_Description_Footer__c</fullName>
    <description>This field is appended to the bottom of the Description field of the Case created by Release Planning (when enabled).</description>
    <inlineHelpText>Enter the text to be appended to the bottom of the Description field of the Case created by Release Planning (if enabled).</inlineHelpText>
    <label>Case Description Footer</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>