force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application__c/fields/agf__Case_Team__c.field-meta.xml
<CustomField>
    <fullName>agf__Case_Team__c</fullName>
    <description>This is the ID of the Scrum Team (ADM_Scrum_Team__c) to be entered in Cases generated with the Run Case Generation function.</description>
    <inlineHelpText>Enter the ID of the Scrum Team to be entered in Cases created by Run Case Generation.</inlineHelpText>
    <label>Case Team</label>
    <length>18</length>
    <type>Text</type>
</CustomField>