force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application__c/fields/agf__Duplicate_Application_Name__c.field-meta.xml
<CustomField>
    <fullName>agf__Duplicate_Application_Name__c</fullName>
    <description>This field is set by the ADM_Application.trigger with the Application record&apos;s name to detect when duplicate names are used.</description>
    <label>Duplicate Application Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>