force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application__c/fields/agf__Enable_Release_Planning__c.field-meta.xml
<CustomField>
    <fullName>agf__Enable_Release_Planning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables Release Planning for this Application.</description>
    <inlineHelpText>Check to enable Release Planning for this Application.</inlineHelpText>
    <label>Enable Release Planning</label>
    <type>Checkbox</type>
</CustomField>