force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application__c/fields/agf__Internal_Instances__c.field-meta.xml
<CustomField>
    <fullName>agf__Internal_Instances__c</fullName>
    <description>Space separated list of instances to be excluded from customer facing posts of Planned Release Schedule</description>
    <inlineHelpText>Enter a space separated list of instances to be excluded from customer facing posts of Planned Release Schedule</inlineHelpText>
    <label>Internal Instances</label>
    <length>80</length>
    <type>Text</type>
</CustomField>