force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application__c/fields/agf__Is_Customer_Facing__c.field-meta.xml
<CustomField>
    <fullName>agf__Is_Customer_Facing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A check in this field indicates that the application is customer-facing, not internal-only.</description>
    <inlineHelpText>A check in this field indicates that the application is customer-facing, not internal-only.</inlineHelpText>
    <label>Is Customer Facing</label>
    <type>Checkbox</type>
</CustomField>