force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application__c/fields/agf__Major_Release_Stagger__c.field-meta.xml
<CustomField>
    <fullName>agf__Major_Release_Stagger__c</fullName>
    <description>This field contains the template for the Major Release Stagger</description>
    <inlineHelpText>Enter the template for the Major Release Stagger</inlineHelpText>
    <label>Major Release Stagger</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>