force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application__c/fields/agf__Other_Release_Stagger__c.field-meta.xml
<CustomField>
    <fullName>agf__Other_Release_Stagger__c</fullName>
    <description>This contains the release stagger for any distributed apps or other releases that are not Major, Patches, or eReleases.</description>
    <inlineHelpText>This contains the release stagger for any distributed apps or other releases that are not Major, Patches, or eReleases.</inlineHelpText>
    <label>Other Release Stagger</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>