force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application__c/fields/agf__Planned_Schedule_Email__c.field-meta.xml
<CustomField>
    <fullName>agf__Planned_Schedule_Email__c</fullName>
    <description>Email address where the Planned Schedule text for releases should be sent when posting Release Alerts</description>
    <inlineHelpText>Enter the email address where the customer facing Planned Schedule for release should be sent.</inlineHelpText>
    <label>Planned Schedule Email</label>
    <type>Email</type>
</CustomField>