force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application__c/fields/agf__Primary_Footer_Text_Next_Major__c.field-meta.xml
<CustomField>
    <fullName>agf__Primary_Footer_Text_Next_Major__c</fullName>
    <description>This text field is inserted below the Schedule of generated Release Alert posts for posts to the Primary Chatter group for all Releases which are under the Next Major Release.</description>
    <inlineHelpText>Enter Primary Chatter group Release Alert footer text for Releases of the Next Major Release.</inlineHelpText>
    <label>Primary Footer Text [Next Major]</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>