force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application__c/fields/agf__Primary_Release_Manager__c.field-meta.xml
<CustomField>
    <fullName>agf__Primary_Release_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Primary Release Manager has primary responsibility for managing the releases for teams supported by this .</description>
    <inlineHelpText>Enter the name of the Release Manager with primary responsibility for the releases of products supported by this Application.</inlineHelpText>
    <label>Primary Release Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ADM_Application_RM1</relationshipName>
    <type>Lookup</type>
</CustomField>