force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application__c/fields/agf__Secondary_Chatter_Post_Notes__c.field-meta.xml
<CustomField>
    <fullName>agf__Secondary_Chatter_Post_Notes__c</fullName>
    <description>This text field is inserted below the Schedule of generated Release Alert posts for posts to the Secondary Chatter group for all Releases.</description>
    <inlineHelpText>Enter Secondary Chatter group Release Alert footer text for all Releases.</inlineHelpText>
    <label>Secondary Footer Text</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>