force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application__c/validationRules/agf__Release_Planning_Must_Be_Enabled_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Release_Planning_Must_Be_Enabled_Case</fullName>
    <active>false</active>
    <description>Release Planning must be enabled to enable Case Creation.</description>
    <errorConditionFormula>agf__Enable_Release_Planning__c != true &amp;&amp; agf__Enable_Release_Planning_Case_Creation__c == true</errorConditionFormula>
    <errorDisplayField>agf__Enable_Release_Planning__c</errorDisplayField>
    <errorMessage>Release Planning must be enabled to enable Case Creation.</errorMessage>
</ValidationRule>