force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application__c/validationRules/agf__Specify_Application_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Specify_Application_Type</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(agf__Application_Type__c))</errorConditionFormula>
    <errorDisplayField>agf__Application_Type__c</errorDisplayField>
    <errorMessage>Application Type must be specified.</errorMessage>
</ValidationRule>