force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application__c/validationRules/agf__Specify_Category.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Specify_Category</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT( agf__Category__c ))</errorConditionFormula>
    <errorDisplayField>agf__Category__c</errorDisplayField>
    <errorMessage>The Application&apos;s Category must be specified.</errorMessage>
</ValidationRule>