force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application__c/listViews/agf__All_Details.listView-meta.xml
<ListView>
    <fullName>agf__All_Details</fullName>
    <columns>NAME</columns>
    <columns>agf__Application_Type__c</columns>
    <columns>agf__Primary_Release_Manager__c</columns>
    <columns>agf__Secondary_Release_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All - Details</label>
</ListView>